--- a/yolo/install_yolo.ipynb
+++ b/yolo/install_yolo.ipynb
@@ -31,7 +31,8 @@
    "source": [
     "# Edit Makefile to include CUDA and cuDNN\n",
     "!sed -i 's/GPU=0/GPU=1/g' Makefile\n",
-    "!sed -i 's/CUDNN=0/CUDNN=1/g' Makefile\n"
+    "!sed -i 's/CUDNN=0/CUDNN=1/g' Makefile\n",
+    "!sed -i 's/OPENCV=0/OPENCV=1/g' Makefile\n"
    ]
   },
   {
@@ -70,7 +71,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Test\n",
+    "%cd /content/darknet\n",
+    "! ./darknet detector test cfg/coco.data cfg/yolov3-tiny.cfg yolov3-tiny.weights -dont_show data/dog.jpg \n",
+    "\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "plt.rcParams['figure.figsize'] = (10, 10)\n",
+    "\n",
+    "plt.imshow(plt.imread('./predictions.jpg'))"
+   ]
   }
  ],
  "metadata": {
